--- a/index.html
+++ b/index.html
@@ -11,7 +11,20 @@
 
 <body>
     <div class="header-full-width">
-
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-6 ">
+                    <a href="#">
+                        LOGO BOOTSTRAP
+                    </a>
+                </div>
+                <div class="col-xs-3 col-xs-offset-3 ">
+                    <a href="#">
+                        MENU
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
 
 </body>
