Section Two Portfolio

--- a/index.html
+++ b/index.html
@@ -32,13 +32,24 @@
     <div class="section-one-hero-container">
         <div class="container">
             <div class="row">
-                <div class="col-xs-8 col-xs-offset-2 marg-top">
+                <div class="col-xs-8 col-xs-offset-2 col-lg-4 col-lg-offset-4 marg-top">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis esse magni numquam saepe iusto voluptatem odio distinctio dolore nostrum deserunt. Debitis quasi maxime totam molestias enim quod quos optio quae qui, iure quisquam libero corporis accusantium
                     dignissimos. Harum aliquam distinctio ut hic culpa libero quam quia cumque magni? Facilis consequatur ducimus, animi sit, suscipit molestias non dolores recusandae illo, fugiat et nesciunt debitis nostrum. Ipsam, voluptatibus veniam
                     odio voluptatem perferendis unde vitae consequuntur laboriosam eos voluptates, quos eius.
                 </div>
             </div>
         </div>
+    </div>
+
+    <!-- SECTION TWO PORTFOLIO-->
+
+    <div class="section-two-portfolio-hero-container">
+        <div class="container">
+            <div class="col-xs-8 col-xs-offset-2 marg-top">
+                PORTFOLIO
+            </div>
+        </div>
+
     </div>
 
 </body>
