--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <div class="header-full-width">
         <div class="container">
             <div class="row">
-                <div class="col-xs-6 ">
+                <div class="col-xs-6 back-col">
                     <a href="#">
                         LOGO BOOTSTRAP
                     </a>
                 </div>
-                <div class="col-xs-3 col-xs-offset-3 ">
+                <div class="col-xs-3 col-xs-offset-3 back-col">
                     <a href="#">
                         MENU
                     </a>
@@ -32,7 +32,7 @@
     <div class="section-one-hero-container">
         <div class="container">
             <div class="row">
-                <div class="col-xs-8 col-xs-offset-2 col-lg-4 col-lg-offset-4 marg-top">
+                <div class="col-xs-8 col-xs-offset-2 col-lg-4 col-lg-offset-4 marg-top back-col">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis esse magni numquam saepe iusto voluptatem odio distinctio dolore nostrum deserunt. Debitis quasi maxime totam molestias enim quod quos optio quae qui, iure quisquam libero corporis accusantium
                     dignissimos. Harum aliquam distinctio ut hic culpa libero quam quia cumque magni? Facilis consequatur ducimus, animi sit, suscipit molestias non dolores recusandae illo, fugiat et nesciunt debitis nostrum. Ipsam, voluptatibus veniam
                     odio voluptatem perferendis unde vitae consequuntur laboriosam eos voluptates, quos eius.
@@ -45,8 +45,36 @@
 
     <div class="section-two-portfolio-hero-container">
         <div class="container">
-            <div class="col-xs-8 col-xs-offset-2 marg-top">
-                PORTFOLIO
+            <div class="row">
+                <div class="col-xs-8 col-xs-offset-2 marg-top back-col">
+                    PORTFOLIO
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-md-4 .back-col marg-top back-col padding-around">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab consectetur perferendis dolore, atque quidem tempore similique at, dolorum nostrum ratione dicta est molestiae repellendus omnis consequuntur ut laborum necessitatibus voluptatum, itaque sint.
+                    Numquam sunt totam facilis? Aspernatur, ullam eius, laborum culpa rem qui laudantium voluptatem modi sunt earum vero consectetu
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-4 .back-col marg-top back-col padding-around">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab consectetur perferendis dolore, atque quidem tempore similique at, dolorum nostrum ratione dicta est molestiae repellendus omnis consequuntur ut laborum necessitatibus voluptatum, itaque sint.
+                    Numquam sunt totam facilis? Aspernatur, ullam eius, laborum culpa rem qui laudantium voluptatem modi sunt earum vero consectetu
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-4 .back-col marg-top back-col padding-around">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab consectetur perferendis dolore, atque quidem tempore similique at, dolorum nostrum ratione dicta est molestiae repellendus omnis consequuntur ut laborum necessitatibus voluptatum, itaque sint.
+                    Numquam sunt totam facilis? Aspernatur, ullam eius, laborum culpa rem qui laudantium voluptatem modi sunt earum vero consectetu
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-4 .back-col marg-top back-col padding-around">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab consectetur perferendis dolore, atque quidem tempore similique at, dolorum nostrum ratione dicta est molestiae repellendus omnis consequuntur ut laborum necessitatibus voluptatum, itaque sint.
+                    Numquam sunt totam facilis? Aspernatur, ullam eius, laborum culpa rem qui laudantium voluptatem modi sunt earum vero consectetu
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-4 .back-col marg-top back-col padding-around">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab consectetur perferendis dolore, atque quidem tempore similique at, dolorum nostrum ratione dicta est molestiae repellendus omnis consequuntur ut laborum necessitatibus voluptatum, itaque sint.
+                    Numquam sunt totam facilis? Aspernatur, ullam eius, laborum culpa rem qui laudantium voluptatem modi sunt earum vero consectetu
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-4 .back-col marg-top back-col padding-around">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab consectetur perferendis dolore, atque quidem tempore similique at, dolorum nostrum ratione dicta est molestiae repellendus omnis consequuntur ut laborum necessitatibus voluptatum, itaque sint.
+                    Numquam sunt totam facilis? Aspernatur, ullam eius, laborum culpa rem qui laudantium voluptatem modi sunt earum vero consectetu
+                </div>
             </div>
         </div>
 
