--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     </div>
     <!-- SECTION ONE HERO -->
 
-    <div class="section-one-hero-container">
+    <div class="green-hero-container">
         <div class="container">
             <div class="row">
-                <div class="col-xs-8 col-xs-offset-2 col-lg-4 col-lg-offset-4 marg-top back-col">
+                <div class="col-xs-8 col-xs-offset-2 col-lg-4 col-lg-offset-4 marg-top back-col box-hero">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis esse magni numquam saepe iusto voluptatem odio distinctio dolore nostrum deserunt. Debitis quasi maxime totam molestias enim quod quos optio quae qui, iure quisquam libero corporis accusantium
                     dignissimos. Harum aliquam distinctio ut hic culpa libero quam quia cumque magni? Facilis consequatur ducimus, animi sit, suscipit molestias non dolores recusandae illo, fugiat et nesciunt debitis nostrum. Ipsam, voluptatibus veniam
                     odio voluptatem perferendis unde vitae consequuntur laboriosam eos voluptates, quos eius.
@@ -77,7 +77,20 @@
                 </div>
             </div>
         </div>
+    </div>
 
+    <!-- SECTION THREE - GREEN CONTAINER 2 -->
+
+    <div class="green-hero-container two">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-8 col-xs-offset-2 col-lg-4 col-lg-offset-4 marg-top back-col box-hero">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis esse magni numquam saepe iusto voluptatem odio distinctio dolore nostrum deserunt. Debitis quasi maxime totam molestias enim quod quos optio quae qui, iure quisquam libero corporis accusantium
+                    dignissimos. Harum aliquam distinctio ut hic culpa libero quam quia cumque magni? Facilis consequatur ducimus, animi sit, suscipit molestias non dolores recusandae illo, fugiat et nesciunt debitis nostrum. Ipsam, voluptatibus veniam
+                    odio voluptatem perferendis unde vitae consequuntur laboriosam eos voluptates, quos eius.
+                </div>
+            </div>
+        </div>
     </div>
 
 </body>
