--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
 
     <!-- SECTION TWO PORTFOLIO-->
 
-    <div class="section-two-portfolio-hero-container">
+    <div class="hero-white-container">
         <div class="container">
             <div class="row">
-                <div class="col-xs-8 col-xs-offset-2 marg-top back-col">
+                <div class="col-xs-8 col-xs-offset-2 col-lg-4 
+                col-lg-offset-4 marg-top back-col">
                     PORTFOLIO
                 </div>
             </div>
@@ -93,6 +94,34 @@
         </div>
     </div>
 
+    <!-- SECTION FOUR - CONTACT ME -->
+
+    <div class="hero-white-container">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-8 col-xs-offset-2 col-lg-4 
+                col-lg-offset-4 marg-top back-col">
+                    CONTACT ME
+                </div>
+                <div class="col-xs-12 marg-top back-col align-left">
+                    Name
+                </div>
+                <div class="col-xs-12 marg-top back-col align-left">
+                    Email Address
+                </div>
+                <div class="col-xs-12 marg-top back-col align-left">
+                    Phone Number
+                </div>
+                <div class="col-xs-12 marg-top back-col align-left">
+                    Message
+                    <br><br><br><br><br><br><br><br><br><br><br><br>
+                </div>
+                <div class="col-xs-12 marg-top back-col align-left">
+                    Send
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
