--- a/index.html
+++ b/index.html
@@ -122,6 +122,26 @@
             </div>
         </div>
     </div>
+
+    <!-- SECTION FIVE -->
+
+    <div class="section-five-container-full-width">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-6 col-xs-offset-3 col-md-4 col-md-offset-0 marg-top back-col">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ex, recusandae tempora nisi maxime suscipit totam accusantium tenetur temporibus cumque!
+                </div>
+                <div class="col-xs-6 col-xs-offset-3 col-md-4 col-md-offset-0 marg-top back-col">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ex, recusandae tempora nisi maxime suscipit totam accusantium tenetur temporibus cumque!
+                </div>
+                <div class="col-xs-6 col-xs-offset-3 col-md-4 col-md-offset-0 marg-top back-col">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ex, recusandae tempora nisi maxime suscipit totam accusantium tenetur temporibus cumque!
+                </div>
+
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
