--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <!-- HEADER -->
-    <div class="header-full-width">
+    <div class="gray-bar-full-width">
         <div class="container">
             <div class="row">
                 <div class="col-xs-6 back-col">
@@ -128,18 +128,23 @@
     <div class="section-five-container-full-width">
         <div class="container">
             <div class="row">
-                <div class="col-xs-6 col-xs-offset-3 col-md-4 col-md-offset-0 marg-top back-col">
+                <div class="col-xs-6 col-xs-offset-3 col-md-4 col-md-offset-0 marg-top back-col margin-bottom">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ex, recusandae tempora nisi maxime suscipit totam accusantium tenetur temporibus cumque!
                 </div>
-                <div class="col-xs-6 col-xs-offset-3 col-md-4 col-md-offset-0 marg-top back-col">
+                <div class="col-xs-6 col-xs-offset-3 col-md-4 col-md-offset-0 marg-top back-col margin-bottom">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ex, recusandae tempora nisi maxime suscipit totam accusantium tenetur temporibus cumque!
                 </div>
-                <div class="col-xs-6 col-xs-offset-3 col-md-4 col-md-offset-0 marg-top back-col">
+                <div class="col-xs-6 col-xs-offset-3 col-md-4 col-md-offset-0 marg-top back-col margin-bottom">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ex, recusandae tempora nisi maxime suscipit totam accusantium tenetur temporibus cumque!
                 </div>
 
             </div>
         </div>
+    </div>
+
+    <!-- SECTION SIX -->
+    <div class="container-full-width">
+        contenuto
     </div>
 
 </body>
