--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
@@ -11,22 +12,35 @@
 
 <body>
     <!-- HEADER -->
-    <div class="gray-bar-full-width">
+    <!-- copiare anche google fonts -->
+    <!-- sezione header copiata -->
+    <nav class="navbar navbar-default">
         <div class="container">
-            <div class="row">
-                <div class="col-xs-6 back-col">
-                    <a href="#">
-                        LOGO BOOTSTRAP
-                    </a>
-                </div>
-                <div class="col-xs-3 col-xs-offset-3 back-col">
-                    <a href="#">
-                        MENU
-                    </a>
-                </div>
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">Start Bootstrap</a>
             </div>
+            <ul class="nav navbar-nav navbar-right visible-md visible-lg">
+                <ul class="menu-header">
+                    <li class="pull-right">
+                        <a href="">
+                            PORTFOLIO
+                        </a>
+                    </li>
+                    <li class="pull-right">
+                        <a href="">
+                            ABOUT
+                        </a>
+                    </li>
+                    <li class="pull-right">
+                        <a href="">
+                            CONTACT
+                        </a>
+                    </li>
+                </ul>
         </div>
-    </div>
+    </nav>
+    <!-- sezione header copiata -->
     <!-- SECTION ONE HERO -->
 
     <div class="green-hero-container">
