--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
 
 <body>
     <!-- HEADER -->
-    <!-- copiare anche google fonts -->
-    <!-- sezione header copiata -->
     <nav class="navbar navbar-default">
         <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
+
             <div class="navbar-header">
                 <a class="navbar-brand" href="#">Start Bootstrap</a>
             </div>
@@ -40,16 +38,14 @@
                 </ul>
         </div>
     </nav>
-    <!-- sezione header copiata -->
     <!-- SECTION ONE HERO -->
 
     <div class="green-hero-container">
         <div class="container">
             <div class="row ">
-                <div class="col-xs-8 col-xs-offset-2 col-lg-4 col-lg-offset-4 marg-top back-col box-hero center-margin">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis esse magni numquam saepe iusto voluptatem odio distinctio dolore nostrum deserunt. Debitis quasi maxime totam molestias enim quod quos optio quae qui, iure quisquam libero corporis accusantium
-                    dignissimos. Harum aliquam distinctio ut hic culpa libero quam quia cumque magni? Facilis consequatur ducimus, animi sit, suscipit molestias non dolores recusandae illo, fugiat et nesciunt debitis nostrum. Ipsam, voluptatibus veniam
-                    odio voluptatem perferendis unde vitae consequuntur laboriosam eos voluptates, quos eius.
+                <div class="col-xs-8 col-xs-offset-2 col-lg-8 col-lg-offset-2 marg-top back-col box-hero center-margin">
+                    <img class="avatar" src="./assets-freelancer/avatar.svg" alt="">
+                    <h1>START BOOTSTRAP</h1>
                 </div>
             </div>
         </div>
