--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -46,6 +47,14 @@
                 <div class="col-xs-8 col-xs-offset-2 col-lg-8 col-lg-offset-2 marg-top back-col box-hero center-margin">
                     <img class="avatar" src="./assets-freelancer/avatar.svg" alt="">
                     <h1>START BOOTSTRAP</h1>
+                    <div class="star-logo-text">
+                        <hr class="hr-inline ">
+                        <span class="star ">
+                            <i class="fas fa-star ">
+                            </i>
+                        </span>
+                        <hr class="hr-inline ">
+                    </div>
                 </div>
             </div>
         </div>
