Section One Done

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="row ">
                 <div class="col-xs-8 col-xs-offset-2 col-lg-8 col-lg-offset-2 marg-top back-col box-hero center-margin">
                     <img class="avatar" src="./assets-freelancer/avatar.svg" alt="">
-                    <h1>START BOOTSTRAP</h1>
+                    <h1 class="bootstrap-text">START BOOTSTRAP</h1>
                     <div class="star-logo-text">
                         <hr class="hr-inline ">
                         <span class="star ">
@@ -54,6 +54,9 @@
                             </i>
                         </span>
                         <hr class="hr-inline ">
+                    </div>
+                    <div>
+                        Graphic Artist-Designer-Illustrator
                     </div>
                 </div>
             </div>
