--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <hr class="hr-inline ">
                     </div>
                     <div>
-                        Graphic Artist-Designer-Illustrator
+                        Graphic Artist-Web Designer-Illustrator
                     </div>
                 </div>
             </div>
@@ -69,8 +69,20 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-8 col-xs-offset-2 col-lg-4 
-                col-lg-offset-4 marg-top back-col">
+                col-lg-offset-4 marg-top back-col portfolio-text">
                     PORTFOLIO
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-8 col-xs-offset-2 back-col portfolio-text">
+                    <div class="star-logo-text align-center">
+                        <hr class="hr-inline ">
+                        <span class="star ">
+                        <i class="fas fa-star ">
+                        </i>
+                    </span>
+                        <hr class="hr-inline ">
+                    </div>
                 </div>
             </div>
             <div class="row">
