--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-8 col-xs-offset-2 back-col portfolio-text">
-                    <div class="star-logo-text align-center">
-                        <hr class="hr-inline ">
+                <div class="col-xs-8 col-xs-offset-2 back-col portfolio-text star-715">
+                    <div class="star-logo-text align-center ">
+                        <hr class="hr-inline blue-color">
                         <span class="star ">
-                        <i class="fas fa-star ">
+                        <i class="fas fa-star blue-color">
                         </i>
                     </span>
-                        <hr class="hr-inline ">
+                        <hr class="hr-inline blue-color">
                     </div>
                 </div>
             </div>
