First Image Gallery

--- a/index.html
+++ b/index.html
@@ -86,30 +86,29 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-12 col-sm-6 col-md-4 .back-col marg-top back-col padding-around">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab consectetur perferendis dolore, atque quidem tempore similique at, dolorum nostrum ratione dicta est molestiae repellendus omnis consequuntur ut laborum necessitatibus voluptatum, itaque sint.
-                    Numquam sunt totam facilis? Aspernatur, ullam eius, laborum culpa rem qui laudantium voluptatem modi sunt earum vero consectetu
+                <div class="col-xs-12 col-sm-6 col-md-4 marg-top back-col padding-around green-back-trans">
+                    <div class="containar-images">
+                        <img src="./assets-freelancer/cabin.png" alt="">
+                        <div class="overlay-img">
+                        </div>
+                    </div>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-4 .back-col marg-top back-col padding-around">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab consectetur perferendis dolore, atque quidem tempore similique at, dolorum nostrum ratione dicta est molestiae repellendus omnis consequuntur ut laborum necessitatibus voluptatum, itaque sint.
-                    Numquam sunt totam facilis? Aspernatur, ullam eius, laborum culpa rem qui laudantium voluptatem modi sunt earum vero consectetu
+                <div class="col-xs-12 col-sm-6 col-md-4 marg-top back-col padding-around green-back-trans">
+                    <img src="assets-freelancer/cake.png" alt="">
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-4 .back-col marg-top back-col padding-around">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab consectetur perferendis dolore, atque quidem tempore similique at, dolorum nostrum ratione dicta est molestiae repellendus omnis consequuntur ut laborum necessitatibus voluptatum, itaque sint.
-                    Numquam sunt totam facilis? Aspernatur, ullam eius, laborum culpa rem qui laudantium voluptatem modi sunt earum vero consectetu
+                <div class="col-xs-12 col-sm-6 col-md-4 marg-top back-col padding-around green-back-trans">
+                    <img src="assets-freelancer/circus.png" alt="">
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-4 .back-col marg-top back-col padding-around">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab consectetur perferendis dolore, atque quidem tempore similique at, dolorum nostrum ratione dicta est molestiae repellendus omnis consequuntur ut laborum necessitatibus voluptatum, itaque sint.
-                    Numquam sunt totam facilis? Aspernatur, ullam eius, laborum culpa rem qui laudantium voluptatem modi sunt earum vero consectetu
+                <div class="col-xs-12 col-sm-6 col-md-4 marg-top back-col padding-around green-back-trans">
+                    <img src="assets-freelancer/game.png" alt="">
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-4 .back-col marg-top back-col padding-around">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab consectetur perferendis dolore, atque quidem tempore similique at, dolorum nostrum ratione dicta est molestiae repellendus omnis consequuntur ut laborum necessitatibus voluptatum, itaque sint.
-                    Numquam sunt totam facilis? Aspernatur, ullam eius, laborum culpa rem qui laudantium voluptatem modi sunt earum vero consectetu
+                <div class="col-xs-12 col-sm-6 col-md-4 marg-top back-col padding-around green-back-trans">
+                    <img src="assets-freelancer/safe.png" alt="">
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-4 .back-col marg-top back-col padding-around">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab consectetur perferendis dolore, atque quidem tempore similique at, dolorum nostrum ratione dicta est molestiae repellendus omnis consequuntur ut laborum necessitatibus voluptatum, itaque sint.
-                    Numquam sunt totam facilis? Aspernatur, ullam eius, laborum culpa rem qui laudantium voluptatem modi sunt earum vero consectetu
+                <div class="col-xs-12 col-sm-6 col-md-4 marg-top back-col padding-around green-back-trans">
+                    <img src="assets-freelancer/submarine.png" alt="">
                 </div>
+
             </div>
         </div>
     </div>
