First Image Done

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                     <div class="containar-images">
                         <img src="./assets-freelancer/cabin.png" alt="">
                         <div class="overlay-img">
+                            <i class="fas fa-plus"></i>
                         </div>
                     </div>
                 </div>
