--- a/index.html
+++ b/index.html
@@ -95,20 +95,46 @@
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4 marg-top back-col padding-around green-back-trans">
-                    <img src="assets-freelancer/cake.png" alt="">
+                    <div class="containar-images">
+                        <img src="./assets-freelancer/cake.png" alt="">
+                        <div class="overlay-img">
+                            <i class="fas fa-plus"></i>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4 marg-top back-col padding-around green-back-trans">
-                    <img src="assets-freelancer/circus.png" alt="">
+                    <div class="containar-images">
+                        <img src="./assets-freelancer/circus.png" alt="">
+                        <div class="overlay-img">
+                            <i class="fas fa-plus"></i>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4 marg-top back-col padding-around green-back-trans">
-                    <img src="assets-freelancer/game.png" alt="">
+                    <div class="containar-images">
+                        <img src="./assets-freelancer/game.png" alt="">
+                        <div class="overlay-img">
+                            <i class="fas fa-plus"></i>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4 marg-top back-col padding-around green-back-trans">
-                    <img src="assets-freelancer/safe.png" alt="">
+                    <div class="containar-images">
+                        <img src="./assets-freelancer/safe.png" alt="">
+                        <div class="overlay-img">
+                            <i class="fas fa-plus"></i>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4 marg-top back-col padding-around green-back-trans">
-                    <img src="assets-freelancer/submarine.png" alt="">
+                    <div class="containar-images">
+                        <img src="./assets-freelancer/submarine.png" alt="">
+                        <div class="overlay-img">
+                            <i class="fas fa-plus"></i>
+                        </div>
+                    </div>
                 </div>
+
 
             </div>
         </div>
