--- a/index.html
+++ b/index.html
@@ -145,67 +145,87 @@
     <div class="green-hero-container two">
         <div class="container">
             <div class="row">
-                <div class="col-xs-8 col-xs-offset-2 col-lg-4 col-lg-offset-4 marg-top back-col box-hero center-margin">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis esse magni numquam saepe iusto voluptatem odio distinctio dolore nostrum deserunt. Debitis quasi maxime totam molestias enim quod quos optio quae qui, iure quisquam libero corporis accusantium
-                    dignissimos. Harum aliquam distinctio ut hic culpa libero quam quia cumque magni? Facilis consequatur ducimus, animi sit, suscipit molestias non dolores recusandae illo, fugiat et nesciunt debitis nostrum. Ipsam, voluptatibus veniam
-                    odio voluptatem perferendis unde vitae consequuntur laboriosam eos voluptates, quos eius.
+                <div class="col-xs-8 col-xs-offset-2 col-lg-8 col-lg-offset-2 marg-top back-col box-hero margin-bottom-50">
+                    <h1 class="bootstrap-text white-text">ABOUT</h1>
+                    <div class="star-logo-text">
+                        <hr class="hr-inline ">
+                        <span class="star ">
+                            <i class="fas fa-star ">
+                            </i>
+                        </span>
+                        <hr class="hr-inline ">
+                    </div>
+                    <div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
-
-    <!-- SECTION FOUR - CONTACT ME -->
-
-    <div class="hero-white-container">
-        <div class="container">
             <div class="row">
-                <div class="col-xs-8 col-xs-offset-2 col-lg-4 
+                <div class="col-xs-8 col-xs-offset-2 visible-xs visible-sm margin-bottom text-increase">
+                    Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.
+                    <br> You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!
+                </div>
+                <div class="col-md-4 visible-md col-md-offset-2 visible-lg margin-bottom text-increase">
+                    Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.
+                </div>
+                <div class="col-md-4 visible-md visible-lg margin-bottom text-increase">
+                    You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!
+                </div>
+
+            </div>
+        </div>
+
+        <!-- SECTION FOUR - CONTACT ME -->
+
+        <div class="hero-white-container">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-8 col-xs-offset-2 col-lg-4 
                 col-lg-offset-4 marg-top back-col">
-                    CONTACT ME
-                </div>
-                <div class="col-xs-12 marg-top back-col align-left">
-                    Name
-                </div>
-                <div class="col-xs-12 marg-top back-col align-left">
-                    Email Address
-                </div>
-                <div class="col-xs-12 marg-top back-col align-left">
-                    Phone Number
-                </div>
-                <div class="col-xs-12 marg-top back-col align-left">
-                    Message
-                    <br><br><br><br><br><br><br><br><br><br><br><br>
-                </div>
-                <div class="col-xs-12 marg-top back-col align-left">
-                    Send
+                        CONTACT ME
+                    </div>
+                    <div class="col-xs-12 marg-top back-col align-left">
+                        Name
+                    </div>
+                    <div class="col-xs-12 marg-top back-col align-left">
+                        Email Address
+                    </div>
+                    <div class="col-xs-12 marg-top back-col align-left">
+                        Phone Number
+                    </div>
+                    <div class="col-xs-12 marg-top back-col align-left">
+                        Message
+                        <br><br><br><br><br><br><br><br><br><br><br><br>
+                    </div>
+                    <div class="col-xs-12 marg-top back-col align-left">
+                        Send
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <!-- SECTION FIVE -->
+        <!-- SECTION FIVE -->
 
-    <div class="section-five-container-full-width">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-6 col-xs-offset-3 col-md-4 col-md-offset-0 marg-top back-col margin-bottom">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ex, recusandae tempora nisi maxime suscipit totam accusantium tenetur temporibus cumque!
-                </div>
-                <div class="col-xs-6 col-xs-offset-3 col-md-4 col-md-offset-0 marg-top back-col margin-bottom">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ex, recusandae tempora nisi maxime suscipit totam accusantium tenetur temporibus cumque!
-                </div>
-                <div class="col-xs-6 col-xs-offset-3 col-md-4 col-md-offset-0 marg-top back-col margin-bottom">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ex, recusandae tempora nisi maxime suscipit totam accusantium tenetur temporibus cumque!
-                </div>
+        <div class="section-five-container-full-width">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-6 col-xs-offset-3 col-md-4 col-md-offset-0 marg-top back-col margin-bottom">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ex, recusandae tempora nisi maxime suscipit totam accusantium tenetur temporibus cumque!
+                    </div>
+                    <div class="col-xs-6 col-xs-offset-3 col-md-4 col-md-offset-0 marg-top back-col margin-bottom">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ex, recusandae tempora nisi maxime suscipit totam accusantium tenetur temporibus cumque!
+                    </div>
+                    <div class="col-xs-6 col-xs-offset-3 col-md-4 col-md-offset-0 marg-top back-col margin-bottom">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ex, recusandae tempora nisi maxime suscipit totam accusantium tenetur temporibus cumque!
+                    </div>
 
+                </div>
             </div>
         </div>
-    </div>
 
-    <!-- SECTION SIX -->
-    <div class="container-full-width">
-        contenuto
-    </div>
+        <!-- SECTION SIX -->
+        <div class="container-full-width">
+            contenuto
+        </div>
 
 </body>
 
