--- a/index.html
+++ b/index.html
@@ -170,7 +170,12 @@
                 <div class="col-md-4 visible-md visible-lg margin-bottom text-increase">
                     You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!
                 </div>
-
+            </div>
+            <div class="btn-container margin-bottom">
+                <button class="btn btn-default" type="submit">
+                    <i class="fas fa-download"></i>
+                    Free Download
+                </button>
             </div>
         </div>
 
@@ -179,9 +184,24 @@
         <div class="hero-white-container">
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-8 col-xs-offset-2 col-lg-4 
-                col-lg-offset-4 marg-top back-col">
-                        CONTACT ME
+                    <div class="row">
+                        <!-- I've used the same class as portfolio, if need to change check there -->
+                        <div class="col-xs-8 col-xs-offset-2 col-lg-4 
+                        col-lg-offset-4 marg-top back-col portfolio-text">
+                            CONTACT ME
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-8 col-xs-offset-2 back-col portfolio-text star-715">
+                            <div class="star-logo-text align-center ">
+                                <hr class="hr-inline blue-color">
+                                <span class="star ">
+                                <i class="fas fa-star blue-color">
+                                </i>
+                            </span>
+                                <hr class="hr-inline blue-color">
+                            </div>
+                        </div>
                     </div>
                     <div class="col-xs-12 marg-top back-col align-left">
                         Name
