--- a/index.html
+++ b/index.html
@@ -203,20 +203,23 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xs-12 marg-top back-col align-left">
+
+                    <!-- form starts here -->
+
+                    <div class="col-xs-8 col-xs-offset-2 marg-top back-col align-left">
                         Name
                     </div>
-                    <div class="col-xs-12 marg-top back-col align-left">
+                    <div class="col-xs-8 col-xs-offset-2 marg-top back-col align-left">
                         Email Address
                     </div>
-                    <div class="col-xs-12 marg-top back-col align-left">
+                    <div class="col-xs-8 col-xs-offset-2 marg-top back-col align-left">
                         Phone Number
                     </div>
-                    <div class="col-xs-12 marg-top back-col align-left">
+                    <div class="col-xs-8 col-xs-offset-2 marg-top back-col align-left">
                         Message
                         <br><br><br><br><br><br><br><br><br><br><br><br>
                     </div>
-                    <div class="col-xs-12 marg-top back-col align-left">
+                    <div class="col-xs-8 col-xs-offset-2 marg-top back-col align-left">
                         Send
                     </div>
                 </div>
