--- a/index.html
+++ b/index.html
@@ -207,21 +207,32 @@
                     <!-- form starts here -->
 
                     <div class="col-xs-8 col-xs-offset-2 marg-top back-col align-left">
-                        Name
+
+                        <form>
+                            <div class="form-group">
+                                <label for="exampleInputText">Name</label>
+                                <input type="text" class="form-control" id="exampleInputName">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">Email address</label>
+                                <input type="email" class="form-control" id="exampleInputEmail1">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputText">Phone Number</label>
+                                <input type="text" class="form-control" id="examplePhoneNumber">
+                            </div>
+
+                            <div class="form-group">
+                                <label for="exampleInputText">Message</label>
+                                <textarea class="form-control" rows="3"></textarea>
+                            </div>
+                            <p>
+                                <button type="button" class="btn btn-primary btn-lg-edit">Send</button>
+                            </p>
+
+                        </form>
                     </div>
-                    <div class="col-xs-8 col-xs-offset-2 marg-top back-col align-left">
-                        Email Address
-                    </div>
-                    <div class="col-xs-8 col-xs-offset-2 marg-top back-col align-left">
-                        Phone Number
-                    </div>
-                    <div class="col-xs-8 col-xs-offset-2 marg-top back-col align-left">
-                        Message
-                        <br><br><br><br><br><br><br><br><br><br><br><br>
-                    </div>
-                    <div class="col-xs-8 col-xs-offset-2 marg-top back-col align-left">
-                        Send
-                    </div>
+
                 </div>
             </div>
         </div>
