--- a/index.html
+++ b/index.html
@@ -243,13 +243,30 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-6 col-xs-offset-3 col-md-4 col-md-offset-0 marg-top back-col margin-bottom">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ex, recusandae tempora nisi maxime suscipit totam accusantium tenetur temporibus cumque!
+                        <h2>
+                            Location
+                        </h2>
+                        <div>
+                            2215 John Daniel Drive
+                            <br> Clark, MO 65243
+                        </div>
+
                     </div>
                     <div class="col-xs-6 col-xs-offset-3 col-md-4 col-md-offset-0 marg-top back-col margin-bottom">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ex, recusandae tempora nisi maxime suscipit totam accusantium tenetur temporibus cumque!
+                        <h2>
+                            AROUND THE WEB
+                        </h2>
                     </div>
                     <div class="col-xs-6 col-xs-offset-3 col-md-4 col-md-offset-0 marg-top back-col margin-bottom">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ex, recusandae tempora nisi maxime suscipit totam accusantium tenetur temporibus cumque!
+                        <h2>
+                            ABOUT FREELANCER
+                        </h2>
+                        <div>
+                            Freelance is a free to use, MIT
+                            <br> licensed Bootstram theme created by
+                            <br>
+                            <a href="#">Start Bootstrap</a>
+                        </div>
                     </div>
 
                 </div>
@@ -258,7 +275,7 @@
 
         <!-- SECTION SIX -->
         <div class="container-full-width">
-            contenuto
+            Copyright © Your Website 2020
         </div>
 
 </body>
