--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         <div class="section-five-container-full-width">
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-6 col-xs-offset-3 col-md-4 col-md-offset-0 marg-top back-col margin-bottom">
+                    <div class="col-xs-8 col-xs-offset-2 col-md-4 col-md-offset-0 marg-top back-col margin-bottom-50">
                         <h2>
                             Location
                         </h2>
@@ -252,15 +252,47 @@
                         </div>
 
                     </div>
-                    <div class="col-xs-6 col-xs-offset-3 col-md-4 col-md-offset-0 marg-top back-col margin-bottom">
+                    <div class="col-xs-8 col-xs-offset-2 col-md-4 col-md-offset-0 marg-top back-col margin-bottom-50">
                         <h2>
                             AROUND THE WEB
                         </h2>
+                        <div class="row">
+                            <div class="col-xs-3 square-round">
+                                <a href="#">
+                                    <i class="fab fa-facebook-f">
+
+                                    </i>
+                                </a>
+                            </div>
+                            <div class="col-xs-3 square-round">
+                                <a href="#">
+                                    <i class="fab fa-twitter">
+
+                                    </i>
+                                </a>
+                            </div>
+                            <div class="col-xs-3 square-round">
+                                <a href="#">
+                                    <i class="fab fa-linkedin-in">
+
+                                    </i>
+                                </a>
+                            </div>
+                            <div class="col-xs-3 square-round">
+                                <a href="#">
+                                    <i class="fab fa-dribbble">
+
+                                    </i>
+                                </a>
+                            </div>
+
+                        </div>
                     </div>
-                    <div class="col-xs-6 col-xs-offset-3 col-md-4 col-md-offset-0 marg-top back-col margin-bottom">
+                    <div class="col-xs-12 col-md-4 col-md-offset-0 marg-top back-col margin-bottom-50">
                         <h2>
                             ABOUT FREELANCER
                         </h2>
+
                         <div>
                             Freelance is a free to use, MIT
                             <br> licensed Bootstram theme created by
