--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                             Freelance is a free to use, MIT
                             <br> licensed Bootstram theme created by
                             <br>
-                            <a href="#">Start Bootstrap</a>
+                            <a class="green-color" href="#">Start Bootstrap</a>
                         </div>
                     </div>
 
