--- a/index.html
+++ b/index.html
@@ -258,11 +258,14 @@
                         </h2>
                         <div class="row">
                             <div class="col-xs-3 square-round">
-                                <a href="#">
-                                    <i class="fab fa-facebook-f">
+                                <div class="contenitore-rotondo">
 
-                                    </i>
-                                </a>
+                                    <a href="#">
+                                        <i class="fab fa-facebook-f">
+                                            
+                                        </i>
+                                    </a>
+                                </div>
                             </div>
                             <div class="col-xs-3 square-round">
                                 <a href="#">
