--- a/index.html
+++ b/index.html
@@ -47,13 +47,11 @@
                 <div class="col-xs-8 col-xs-offset-2 col-lg-8 col-lg-offset-2 marg-top back-col box-hero center-margin">
                     <img class="avatar" src="./assets-freelancer/avatar.svg" alt="">
                     <h1 class="bootstrap-text">START BOOTSTRAP</h1>
-                    <div class="star-logo-text">
-                        <hr class="hr-inline ">
-                        <span class="star ">
-                            <i class="fas fa-star ">
+                    <div class="star-container">
+                        <div class="star">
+                            <i class="fas fa-star">
                             </i>
-                        </span>
-                        <hr class="hr-inline ">
+                        </div>
                     </div>
                     <div>
                         Graphic Artist-Web Designer-Illustrator
@@ -75,14 +73,16 @@
             </div>
             <div class="row">
                 <div class="col-xs-8 col-xs-offset-2 back-col portfolio-text star-715">
-                    <div class="star-logo-text align-center ">
-                        <hr class="hr-inline blue-color">
-                        <span class="star ">
-                        <i class="fas fa-star blue-color">
-                        </i>
-                    </span>
-                        <hr class="hr-inline blue-color">
+
+                    <!-- cut from down heeeeeeeeeeeeeeeeeeeere -->
+                    <div class="star-container">
+                        <div class="star blue-back">
+                            <i class="fas fa-star blue-back ">
+                            </i>
+                        </div>
                     </div>
+                    <!-- cut from up heeeeeeeeeeeeeeeeeeeere -->
+
                 </div>
             </div>
             <div class="row">
