--- a/index.html
+++ b/index.html
@@ -47,12 +47,15 @@
                 <div class="col-xs-8 col-xs-offset-2 col-lg-8 col-lg-offset-2 marg-top back-col box-hero center-margin">
                     <img class="avatar" src="./assets-freelancer/avatar.svg" alt="">
                     <h1 class="bootstrap-text">START BOOTSTRAP</h1>
+
+                    <!-- white star logo down here  -->
                     <div class="star-container">
                         <div class="star">
                             <i class="fas fa-star">
                             </i>
                         </div>
                     </div>
+                    <!-- white star logo up here  -->
                     <div>
                         Graphic Artist-Web Designer-Illustrator
                     </div>
@@ -74,14 +77,14 @@
             <div class="row">
                 <div class="col-xs-8 col-xs-offset-2 back-col portfolio-text star-715">
 
-                    <!-- cut from down heeeeeeeeeeeeeeeeeeeere -->
+                    <!-- blue star logo down here -->
                     <div class="star-container">
                         <div class="star blue-back">
                             <i class="fas fa-star blue-back ">
                             </i>
                         </div>
                     </div>
-                    <!-- cut from up heeeeeeeeeeeeeeeeeeeere -->
+                    <!-- blue star logo up here -->
 
                 </div>
             </div>
@@ -147,16 +150,15 @@
             <div class="row">
                 <div class="col-xs-8 col-xs-offset-2 col-lg-8 col-lg-offset-2 marg-top back-col box-hero margin-bottom-50">
                     <h1 class="bootstrap-text white-text">ABOUT</h1>
-                    <div class="star-logo-text">
-                        <hr class="hr-inline ">
-                        <span class="star ">
-                            <i class="fas fa-star ">
+
+                    <!-- white star logo down here  -->
+                    <div class="star-container">
+                        <div class="star">
+                            <i class="fas fa-star">
                             </i>
-                        </span>
-                        <hr class="hr-inline ">
+                        </div>
                     </div>
-                    <div>
-                    </div>
+                    <!-- white star logo up here  -->
                 </div>
             </div>
             <div class="row">
@@ -193,14 +195,14 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-8 col-xs-offset-2 back-col portfolio-text star-715">
-                            <div class="star-logo-text align-center ">
-                                <hr class="hr-inline blue-color">
-                                <span class="star ">
-                                <i class="fas fa-star blue-color">
-                                </i>
-                            </span>
-                                <hr class="hr-inline blue-color">
+                            <!-- blue star logo down here -->
+                            <div class="star-container">
+                                <div class="star blue-back">
+                                    <i class="fas fa-star blue-back ">
+                            </i>
+                                </div>
                             </div>
+                            <!-- blue star logo up here -->
                         </div>
                     </div>
 
